fix padding on mobile

--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -46,11 +46,16 @@
 
 .content-background {
   background-color: #ffffff;
-  margin: 0 10px;
   padding-top: 80px;
+
+
+  padding-left: 5px;
+  padding-right: 5px;
+
+  @media (min-width: @screen-sm-min) {
   padding-left: 20px;
   padding-right: 20px;
-
+  }
 }
 
 .subheading-color {
